# wmlcups

./: .gitignore  Makefile.am  README  configure.ac  lpd.c  lpdstat.c  qlpd.cpp  rp.c  test.cpp  testCupsdCtrl.cpp  testJobList.cpp  testPrint.cpp  testaccept.cpp  testenable.cpp  testjobcommand.cpp  testmemberuris.cpp  testppd.cpp  teststatus.cpp  wcupsaccept.cpp  wcupsenable.cpp  wcupsprint.cpp
doc/: Doxyfile.in  Makefile.am
wmlcups/: CupsCtrl.cpp  CupsCtrl.h  CupsCtrlClasses.cpp  CupsCtrlError.cpp  CupsCtrlJobs.cpp  CupsCtrlPpd.cpp  CupsCtrlPrinter.cpp  CupsCtrlQueue.cpp  CupsJob.cpp  CupsJob.h  CupsdCtrl.cpp  CupsdCtrl.h  IppAttr.cpp  IppAttr.h  Makefile.am  Ppd.cpp  Ppd.h  PpdOption.cpp  PpdOption.h  QueueCupsStatus.h  WmlCups.cpp  WmlCups.h  WmlIppAttr.cpp  WmlIppAttr.h  cups-inetd.c  cups-inetd.h  wmlcups.cpp  wmlcups.h
